--- a/WebApplication4/WebApplication4/Views/Empleado/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Empleado/Index.cshtml
@@ -55,7 +55,7 @@
                     <div class="col-md-6">
                         <div class="form-group">
                             <a class="btn btn-primary" href="#formNuevo1" data-toggle="modal">Nuevo <span class="glyphicon glyphicon-plus"></span></a>
-                            <a class="btn btn-primary" data-toggle="modal" onclick="redirige()">Modificar<span class="glyphicon glyphicon-pencil"></span></a>
+                            <a class="btn btn-primary" data-toggle="modal" onclick="redirigeV()">Modificar<span class="glyphicon glyphicon-pencil"></span></a>
                             <a class="btn btn-primary" href="#eliminar1" data-toggle="modal">Dar de Baja <span class="glyphicon glyphicon-remove"></span></a>
                             @*<button id=botonOculto1 style="visibility:hidden" type="button" class="btn btn-primary" onclick="msjConfirmacion2_1()">Guardar Cambios <span class="glyphicon glyphicon-save"></span></button>*@
                         </div>
@@ -84,11 +84,11 @@
                     <table id="mytable" class="table table-bordered table-hover">
                         <thead>
                             <tr class="thead">
+                                <th>Correo (Usuario)</th>
                                 <th>Nombre</th>
                                 <th>Apellido</th>
                                 <th>Direccion</th>
                                 <th>Telefono</th>
-                                <th>Correo (Usuario)</th>
                                 <th>Estado</th>
                                 <th></th>
                             </tr>
@@ -97,11 +97,11 @@
                             @foreach (var row in listaEmpleado)
                             {
                                 <tr id=@row.usuario onclick="myFunction(this)">
+                                    <td>@row.usuario</td>
                                     <td>@row.nombre</td>
                                     <td>@row.apellido</td>
                                     <td>@row.direccion</td>
                                     <td>@row.telefono</td>
-                                    <td>@row.usuario</td>
                                     <td>@row.estado</td>
                                     <td>@Html.ActionLink("Delete", "Delete", new { usuario = row.usuario.Replace("@", "°") })</td>
                                     <td>@Html.ActionLink("Edit", "Edit", new { usuario = row.usuario.Replace("@", "°") })</td>
@@ -124,7 +124,7 @@
                     <div class="col-md-6">
                         <div class="form-group">
                             <a class="btn btn-primary" href="#formNuevo2" data-toggle="modal">Nuevo <span class="glyphicon glyphicon-plus"></span></a>
-                            <a class="btn btn-primary" data-toggle="modal" onclick="redirige()">Modificar<span class="glyphicon glyphicon-pencil"></span></a>
+                            <a class="btn btn-primary" data-toggle="modal" onclick="redirigeP()">Modificar<span class="glyphicon glyphicon-pencil"></span></a>
                             <a class="btn btn-primary" href="#eliminar2" data-toggle="modal">Dar de Baja <span class="glyphicon glyphicon-remove"></span></a>
                             @*<button id=botonOculto2 style="visibility:hidden" type="button" class="btn btn-primary" onclick="msjConfirmacion2_2()">Guardar cambios <span class="glyphicon glyphicon-save"></span></button>*@
                         </div>
@@ -155,11 +155,11 @@
                     <table id="mytable" class="table table-bordered table-hover">
                         <thead>
                             <tr class="thead">
+                                <th>Correo (Usuario)</th>
                                 <th>Nombre</th>
                                 <th>Apellido</th>
                                 <th>Direccion</th>
                                 <th>Telefono</th>
-                                <th>Correo (Usuario)</th>
                                 <th>Estado</th>
                                 <th></th>
                             </tr>
@@ -167,12 +167,12 @@
                         <tbody id="tbody">
                             @foreach (var row in listaPromotor)
                             {
-                                <tr id=@row.usuario onclick="myFunction(this)">
+                                <tr id=@row.usuario onclick="myFunction2(this)">
+                                    <td>@row.usuario</td>
                                     <td>@row.nombre</td>
                                     <td>@row.apellido</td>
                                     <td>@row.direccion</td>
                                     <td>@row.telefono</td>
-                                    <td>@row.usuario</td>
                                     <td>@row.estado</td>
                                     <td>@Html.ActionLink("Delete", "Delete", new { usuario = row.usuario.Replace("@", "°") })</td>
                                     <td>@Html.ActionLink("Edit", "Edit", new { usuario = row.usuario.Replace("@", "°") })</td>
@@ -192,128 +192,7 @@
 
 <input type="hidden" id="idEmpleadoT" value="" />
 <input type="hidden" id="idPromotorT" value="" />
-<script>
-    function myFunction(x) {
-        if (document.getElementsByClassName("trselected").length > 0) {
-            var element = document.getElementsByClassName("trselected");
-            //element.item[0].cells[0].innerText;
-            element[0].className = "";
-        }
-        var elem = document.getElementById("idEmpleadoT");
-        elem.value = x.cells[0].innerHTML;
-        x.className = "trselected";
-    }
-    function myFunction2(x) {
-        if (document.getElementsByClassName("trselected").length > 0) {
-            var element = document.getElementsByClassName("trselected");
-            //element.item[0].cells[0].innerText;
-            element[0].className = "";
-        }
-        var elem = document.getElementById("idPromotorT");
-        elem.value = x.cells[0].innerHTML;
-        x.className = "trselected";
-    }
-    function borrar() {
-        var organizador = $('#idOrganizadorT').val();
-        var el = document.getElementById(organizador);
-        var row = $(el).closest('tr');
-        //alert(evento);
-        //alert(promocion);
-        if (organizador != "" && organizador != null) {
-            $.ajax({
-                url: "@Url.Action("Delete", "Organizador")",
-                data: { organizador: organizador },
-                success: function (data) {
-                    //alert("Eliminado");
-                    $('#eliminar').modal('hide');
-                    row.remove();
-                    window.location.href = '/Organizador/Index';
-                },
-                error: function () {
-                    alert("Error :(");
-                }
-            });
-        } else {
-            alert("Seleccione un Organizador");
-            evento = "";
-        }
-    }
-    function busca() {
-        var nombre = $('#idBusq').val();
-        //var el = document.getElementById(regalo);
-        //var row = $(el).closest('tr');
-        //alert(evento);
-        //alert(promocion);
-        $.ajax({
-            url: "@Url.Action("Search3", "Empleado")",
-            data: { nombre: nombre },
-            success: function (data) {
-                window.location.href = '/Empleado/Index';
-                //alert("Eliminado");
-                //row.remove();
-            },
-            error: function () {
-                alert("Error :(");
-            }
-        });
-    }
-    function busca2() {
-        var nombre = $('#idBusq2').val();
-        //var el = document.getElementById(regalo);
-        //var row = $(el).closest('tr');
-        //alert(evento);
-        //alert(promocion);
-        $.ajax({
-            url: "@Url.Action("Search4", "Empleado")",
-            data: { nombre: nombre },
-        success: function (data) {
-            window.location.href = '/Empleado/Index';
-            //alert("Eliminado");
-            //row.remove();
-        },
-        error: function () {
-            alert("Error :(");
-        }
-    });
-    }
-    function redirige() {
-        var organizador = $('#idOrganizadorT').val();
-        if (organizador != "") {
-            window.location.href = '/Organizador/Edit?organizador=' + organizador;
-        } else {
-            alert("Seleccione un Organizador");
-            evento = "";
-        }
-        //$.post('/Regalo/Edit/' + regalo);
-    }
-    function modificar() {
-        var regalo = $('#idOrganizadorT').val();
-        //var el = document.getElementById(regalo);
-        //var row = $(el).closest('tr');
-        //alert(evento);
-        //alert(promocion);
-        $.ajax({
-            url: "@Url.Action("Edit", "Organizador")",
-            data: { regalo: regalo },
-            success: function (data) {
-                //alert("Eliminado");
-                //row.remove();
-            },
-            error: function () {
-                alert("Error :(");
-            }
-        });
-    }
-    function closewindow() {
-        $('#eliminar').modal('hide');
-    }
-</script>
 
-<style>
-    .trselected {
-        background: gray;
-    }
-</style>
 
 
 <div class="modal fade" id="formNuevo1">
@@ -621,7 +500,7 @@
             <!--footer de la ventana-->
             <div class="modal-footer">
                 <button type="button" onclick="borrar()" class="btn btn-primary">Aceptar <span class="glyphicon glyphicon-ok"></span></button>
-                <button type="button" onclick="return closewindow();" class="btn btn-danger">Cancelar <span class="glyphicon glyphicon-remove"></span></button>
+                <button type="button" onclick="return closewindow1();" class="btn btn-danger">Cancelar <span class="glyphicon glyphicon-remove"></span></button>
             </div>
         </div>
     </div>
@@ -643,11 +522,171 @@
             </div>
             <!--footer de la ventana-->
             <div class="modal-footer">
-                <button type="button" onclick="borrar()" class="btn btn-primary">Aceptar <span class="glyphicon glyphicon-ok"></span></button>
-                <button type="button" onclick="return closewindow();" class="btn btn-danger">Cancelar <span class="glyphicon glyphicon-remove"></span></button>
+                <button type="button" onclick="borrar2()" class="btn btn-primary">Aceptar <span class="glyphicon glyphicon-ok"></span></button>
+                <button type="button" onclick="return closewindow2();" class="btn btn-danger">Cancelar <span class="glyphicon glyphicon-remove"></span></button>
             </div>
         </div>
     </div>
 </div>
 
+<script>
+    function myFunction(x) {
+        if (document.getElementsByClassName("trselected").length > 0) {
+            var element = document.getElementsByClassName("trselected");
+            //element.item[0].cells[0].innerText;
+            element[0].className = "";
+        }
+        var elem = document.getElementById("idEmpleadoT");
+        elem.value = x.cells[0].innerHTML;
+        x.className = "trselected";
+    }
+    function myFunction2(x) {
+        if (document.getElementsByClassName("trselected").length > 0) {
+            var element = document.getElementsByClassName("trselected");
+            //element.item[0].cells[0].innerText;
+            element[0].className = "";
+        }
+        var elem = document.getElementById("idPromotorT");
+        elem.value = x.cells[0].innerHTML;
+        x.className = "trselected";
+    }
+    function borrar() {
+        var usuario = $('#idEmpleadoT').val();
+        var el = document.getElementById(usuario);
+        var row = $(el).closest('tr');
+        //alert(evento);
+        //alert(promocion);
+        if (usuario != "" && usuario != null) {
+            $.ajax({
+                url: "@Url.Action("Delete", "Empleado")",
+                data: { usuario: usuario },
+                success: function (data) {
+                    //alert("Eliminado");
+                    $('#eliminar').modal('hide');
+                    //row.remove();
+                    window.location.href = '/Empleado/Index';
+                },
+                error: function () {
+                    alert("Error :(");
+                }
+            });
+        } else {
+            alert("Seleccione un Vendedor");
+            evento = "";
+        }
+    }
+    function borrar2() {
+        var usuario = $('#idPromotorT').val();
+        var el = document.getElementById(usuario);
+        var row = $(el).closest('tr');
+        //alert(evento);
+        //alert(promocion);
+        if (usuario != "" && usuario != null) {
+            $.ajax({
+                url: "@Url.Action("Delete", "Empleado")",
+                data: { usuario: usuario },
+                success: function (data) {
+                    //alert("Eliminado");
+                    $('#eliminar').modal('hide');
+                    //row.remove();
+                    window.location.href = '/Empleado/Index';
+                },
+                error: function () {
+                    alert("Error :(");
+                }
+            });
+        } else {
+            alert("Seleccione un Promotor");
+            evento = "";
+        }
+    }
+    function busca() {
+        var nombre = $('#idBusq').val();
+        //var el = document.getElementById(regalo);
+        //var row = $(el).closest('tr');
+        //alert(evento);
+        //alert(promocion);
+        $.ajax({
+            url: "@Url.Action("Search3", "Empleado")",
+            data: { nombre: nombre },
+            success: function (data) {
+                window.location.href = '/Empleado/Index';
+                //alert("Eliminado");
+                //row.remove();
+            },
+            error: function () {
+                alert("Error :(");
+            }
+        });
+    }
+    function busca2() {
+        var nombre = $('#idBusq2').val();
+        //var el = document.getElementById(regalo);
+        //var row = $(el).closest('tr');
+        //alert(evento);
+        //alert(promocion);
+        $.ajax({
+            url: "@Url.Action("Search4", "Empleado")",
+            data: { nombre: nombre },
+            success: function (data) {
+                window.location.href = '/Empleado/Index';
+                //alert("Eliminado");
+                //row.remove();
+            },
+            error: function () {
+                alert("Error :(");
+            }
+        });
+    }
+    function redirigeV() {
+        var usuario = $('#idEmpleadoT').val();
+        if (usuario != "") {
+            window.location.href = '/Empleado/Edit?usuario=' + usuario;
+        } else {
+            alert("Seleccione un Vendedor");
+            evento = "";
+        }
+        //$.post('/Regalo/Edit/' + regalo);
+    }
+    function redirigeP() {
+        var usuario = $('#idPromotorT').val();
+        if (usuario != "") {
+            window.location.href = '/Empleado/Edit?usuario=' + usuario;
+        } else {
+            alert("Seleccione un Promotor");
+            evento = "";
+        }
+        //$.post('/Regalo/Edit/' + regalo);
+    }
+    function modificar() {
+        var regalo = $('#idOrganizadorT').val();
+        //var el = document.getElementById(regalo);
+        //var row = $(el).closest('tr');
+        //alert(evento);
+        //alert(promocion);
+        $.ajax({
+            url: "@Url.Action("Edit", "Organizador")",
+            data: { regalo: regalo },
+            success: function (data) {
+                //alert("Eliminado");
+                //row.remove();
+            },
+            error: function () {
+                alert("Error :(");
+            }
+        });
+    }
+    function closewindow1() {
+        $('#eliminar1').modal('hide');
+    }
+    function closewindow2() {
+        $('#eliminar2').modal('hide');
+    }
+</script>
+
+<style>
+    .trselected {
+        background: gray;
+    }
+</style>
 
