Tablas sin sombra al estar encima

--- a/WebApplication4/WebApplication4/Views/Promocion/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Promocion/Index.cshtml
@@ -63,7 +63,7 @@
     }
 
     <div class="row">
-        <table id="mytable" class="table table-bordered table-hover">
+        <table id="mytable" class="table table-bordered">
             <thead>
                 <tr class="thead">
                     <th>Codigo</th>
